entity framework db connection with mysql

--- a/PokedexProject.API/appsettings.json
+++ b/PokedexProject.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PokemonConnection": "Server=localhost;Database=PokemonDb;Uid=root;Pwd=root;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
